syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ProductFeatureProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Product Feature
message ProductFeatureFlatData {
    option (routines.entity_type) = "ProductFeature";
    option (routines.keys).keys = "product_feature_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productFeatureId
    string product_feature_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string product_feature_type_id = 2 [(routines.opts).field_type = "id"];
    string product_feature_category_id = 3 [(routines.opts).field_type = "id"];
    string description = 4 [(routines.opts).field_type = "description"];
    string uom_id = 5 [(routines.opts).field_type = "id"];
    routines.FixedPoint number_specified = 6 [(routines.opts).field_type = "fixed-point"];
    routines.Currency default_amount = 7 [(routines.opts).field_type = "currency-amount"];
    int64 default_sequence_num = 8 [(routines.opts).field_type = "numeric"];
    string abbrev = 9 [(routines.opts).field_type = "id"];
    string id_code = 10 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp last_updated_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 12 [(routines.opts).field_type = "date-time"];
    string tenant_id = 13 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 31;
    map<string, google.protobuf.Any> attachments = 32 ;
}

message ProductFeatureKey{
    string product_feature_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProductFeatureList{
    repeated ProductFeatureFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductFeatures` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Product Feature Applicability
message ProductFeatureApplData {
    option (routines.entity_type) = "ProductFeatureAppl";
    option (routines.keys).keys = "product_id, product_feature_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productId, productFeatureId, fromDate
    // fields
    string product_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_id = 2 [(routines.opts).field_type = "id"];
    string product_feature_appl_type_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    int64 sequence_num = 6 [(routines.opts).field_type = "numeric"];
    routines.Currency amount = 7 [(routines.opts).field_type = "currency-amount"];
    routines.Currency recurring_amount = 8 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17;
}


message ProductFeatureApplKey{
    string product_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message ProductFeatureApplList{
    repeated ProductFeatureApplData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductFeatureAppls` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Product Feature Category
message ProductFeatureCategoryFlatData {
    option (routines.entity_type) = "ProductFeatureCategory";
    option (routines.keys).keys = "product_feature_category_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productFeatureCategoryId
    string product_feature_category_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string parent_category_id = 2 [(routines.opts).field_type = "id"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string tenant_id = 6 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13 ;
}

message ProductFeatureCategoryKey{
    string product_feature_category_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ProductFeatureCategoryList{
    repeated ProductFeatureCategoryFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductFeatureCategories` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Product Feature Category Application
message ProductFeatureCategoryApplData {
    option (routines.entity_type) = "ProductFeatureCategoryAppl";
    option (routines.keys).keys = "product_category_id, product_feature_category_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productCategoryId, productFeatureCategoryId, fromDate
    // fields
    string product_category_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_category_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message ProductFeatureCategoryApplKey{
    string product_category_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_category_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message ProductFeatureCategoryApplList{
    repeated ProductFeatureCategoryApplData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductFeatureCategoryAppls` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Product Feature Interaction
message ProductFeatureIactnData {
    option (routines.entity_type) = "ProductFeatureIactn";
    option (routines.keys).keys = "product_feature_id, product_feature_id_to";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: productFeatureId, productFeatureIdTo
    // fields
    string product_feature_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_id_to = 2 [(routines.opts).field_type = "id"];
    string product_feature_iactn_type_id = 3 [(routines.opts).field_type = "id"];
    string product_id = 4 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message ProductFeatureIactnKey{
    string product_feature_id = 1 [(routines.opts).field_type = "id"];
    string product_feature_id_to = 2 [(routines.opts).field_type = "id"];
}

message ProductFeatureIactnList{
    repeated ProductFeatureIactnData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListProductFeatureIactns` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


